add searchform-half partial + update with ruby card-desplay-talents/landing-card/searchform partials + use in home/search-result pages + update variable name for existing renders

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -32,6 +32,6 @@
   <% end %>
 <% end %>
 
-<%= render partial: 'layouts/model_error_messages', locals: {model_name: @appointment} %> 
-<%= render partial: 'layouts/model_error_messages', locals: {model_name: @talent} %>
-<%= render partial: 'layouts/model_error_messages', locals: {model_name: @place} %>
+<%= render partial: 'layouts/model_error_messages', locals: {model: @appointment} %> 
+<%= render partial: 'layouts/model_error_messages', locals: {model: @talent} %>
+<%= render partial: 'layouts/model_error_messages', locals: {model: @place} %>
