--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,16 +2,16 @@
 <!-- USERS MESSAGES -->
 <%= render 'layouts/messages' %>
 
-<%= form_tag search_results_path, method: 'get' do %>
-  <%= text_field_tag :search_keywords%>
-  <%= submit_tag "Search"%>
+
+
+<%= render partial: 'layouts/searchform' %>
+
+<% @talents.sample(5).each do |talent|%>
+  <%= render partial: 'layouts/landing-card', locals: {model: talent} %>
 <% end %>
 
-<%# --- Random talents printed on home page --- %>
-<% @talents.sample(4).each do |talent|%>
-<ul>
-    <li> <%= talent.title%> </li>
-    <li> <%= talent.description%> </li>
-    <li> <%= talent.user_id%>
-</ul>
-<% end %>
+
+
+
+
+<!-- <%= render partial: 'layouts/searchform', locals: {model: @appointment} %> -->
