--- a/app/views/layouts/_searchform-half.html.erb
+++ b/app/views/layouts/_searchform-half.html.erb
@@ -1,8 +1,8 @@
+<label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je veux apprendre:</label>
 <%= form_tag search_results_path, method: 'get' do %>
     <div class="form-group row max-width-50">
-        <label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je veux apprendre:</label>
         <div class="col-sm-7">
-          <%= text_field_tag :search_keywords, nil, class: "form-control form-control-lg", id: "search_keywords", placeholder: "ta recherche" %>
+          <%= text_field_tag :search_keywords, nil, class: "form-control form-control-lg", id: "search_keywords", placeholder: "ta recherche", value: keyword %>
         </div>
         <div class="col-sm-2">
             <%= submit_tag "Recherche", class: "btn btn-primary btn-lg mb-2" %> 
