--- a/app/views/talents/search_results.html.erb
+++ b/app/views/talents/search_results.html.erb
@@ -1,13 +1,9 @@
-<h1> Résultat de la recherche pour "<%= params[:search_keywords]%>" </h1>
-
 <!-- USERS MESSAGES -->
 <%= render 'layouts/messages' %>
 
+<%= render partial: 'layouts/searchform-half', locals: {keyword: params[:search_keywords]} %>
+
 <br>
 <% @found_talents.each do |talent|%>
-<ul>
-    <li> <%= talent.title%> </li>
-    <li> <%= talent.description%> </li>
-    <li> <%= talent.user_id%>
-</ul>
+    <%= render partial: 'layouts/card-display-talents', locals: {model: talent} %>
  <% end %>
