render generic for card + images update of kit ui + use of generic card

--- a/app/views/talents/search_results.html.erb
+++ b/app/views/talents/search_results.html.erb
@@ -5,5 +5,5 @@
 
 <br>
 <% @found_talents.each do |talent|%>
-    <%= render partial: 'layouts/card-display-talents', locals: {model: talent} %>
+    <%= render partial: 'layouts/card-talent', locals: {model: talent, type: "search-result"} %>
  <% end %>
