--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,19 @@
-<div class="card bg-light mx-auto" style="width: 700px;">
-  <article class="card-body mx-auto" style="max-width: 450px;">
-    <h1 class="card-title text-center"><i class="fas fa-user-circle"></i></h1>
-    <h2 class="card-title text-center">Mon profil</h2>
-    <hr class="mb-4">
+<h1 class="card-title text-center"><i class="fas fa-user-circle"></i></h1>
+<h2 class="card-title text-center">Mon profil</h2>
+<hr class="mb-4">
 
-    <!-- MANAGE PROFIL LINK -->
-    <h4 class="card-title mt-3 text-center">Gérer mon profil</h4>
-    <hr>
-    <div class="actions">
-      <%= button_to 'Modifier/suprimer mon profil', edit_user_registration_path(), method: :get, class: "btn btn-primary btn-block" %>
-    </div>
+<!-- MANAGE PROFIL LINK -->
+<h4 class="card-title mt-3 text-center">Gérer mon profil</h4>
+<hr>
+<div class="actions">
+  <%= button_to 'Modifier/suprimer mon profil', edit_user_registration_path(), method: :get, class: "btn btn-primary btn-block" %>
+</div>
 
-  </article>
-</div> <!-- card.// -->
+<!-- CONFIRMED APPOINTMENTS -->
+<% if @paid_appointments %>
+  <% @paid_appointments.each do |paid_appointment| %>
+  <%= render partial: 'layouts/card-talent', locals: {model: paid_appointment.talent, type: "mentor-validate"} %>
+  <% end %>
+<% else %>
+  Tu n'as pas de séance validée
+<% end %>
