--- a/app/views/static_pages/kit_ui.html.erb
+++ b/app/views/static_pages/kit_ui.html.erb
@@ -12,6 +12,8 @@
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
   </div>
+  
+  <h4 class="text-primary">Heading 4 titre</h4>
   <p> voici un paragraphe</p>
     
 <!-------------- BUTTONS PLAIN ------------------->
@@ -330,6 +332,15 @@
       </div>
     </div>
   </div>
+
+
+<!-- Jumbotron --->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Fluid jumbotron</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
+</div>
     
 <!-- Searching tools -->
   <form>
