--- a/app/views/layouts/_landing-card.html.erb
+++ b/app/views/layouts/_landing-card.html.erb
@@ -1,4 +1,4 @@
-  <div class="card card-custom shadow mb-5 text-center max-width-18">
+  <div class="card card-custom shadow text-center max-width-15 ml-3 mr-4 mb-4 ">
     <%= image_tag model.picture, alt: 'picture', class: "card-img-top" %>
     <div class="card-body">
       <h5 class="card-title"><%= model.title%></h5>
