centralize flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <%= render 'layouts/header' %>
 
     <div class="container">
+      <!-- USERS MESSAGES -->
+      <%= render 'layouts/messages' %>  
 
       <!-- PAGE CONTENT -->
       <%= yield %>
