--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,20 +1,72 @@
  <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
-    <a class="navbar-brand" href="#">Talent Connect</a>
+    <a class="navbar-brand" href="<%=home_path%>">Talent Connect</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
+
+        <!-- TEST DROPDOWN -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle btn btn-primary" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            [T]
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <!-- TALENTS -->
+            <a class="dropdown-item" href="<%= talents_path %>">talents#index</a>
+            <a class="dropdown-item" href="<%= talent_path(1) %>">talents#show n°1</a>
+            <a class="dropdown-item" href="<%= new_talent_path %>">talents#new</a>
+            <a class="dropdown-item" href="<%= edit_talent_path(1) %>">talents#edit n°1</a>
+            
+            <hr>
+            <!-- APPOINTMENTS -->
+            <a class="dropdown-item" href="<%= appointments_path %>">appointments#index</a>
+            <a class="dropdown-item" href="<%= new_talent_appointment_path(1) %>">appointments#new (talent n°1)</a>
+            
+            <hr>
+            <!-- PLACES -->
+            <a class="dropdown-item" href="<%= places_path %>">places#index</a>
+            <a class="dropdown-item" href="<%= place_path(1) %>">places#show n°1</a>
+            <a class="dropdown-item" href="<%= edit_place_path(1) %>">places#edit n°1</a>
+            
+            <hr>
+            <!-- USERS -->
+            <a a class="dropdown-item" href="<%= users_path %>">users#index</a>
+            <% if user_signed_in? %>
+              <a a class="dropdown-item" href="<%= user_path(current_user.id) %>">users#show</a>
+            <% end %>
+            <a class="dropdown-item" href="<%= new_user_registration_path %>">registrations#new</a>
+            <a class="dropdown-item" href="<%= edit_user_registration_path %>">registrations#edit</a>
+            <% if user_signed_in? %>
+              <a class="dropdown-item" href="<%= user_registration_path %>" data-confirm="Es-tu sûr de vouloir supprimer le compte ?" data-method="DELETE">registrations#destroy</a>
+            <% end %>
+            <a class="dropdown-item" href="<%= new_user_session_path %>">sessions#new</a>
+            <% if user_signed_in? %>
+              <a class="dropdown-item" href="<%= destroy_user_session_path(session[:user_id]) %>" data-confirm="Es-tu sûr de vouloir te déconnecter ?" data-method="DELETE">sessions#destroy</a>
+            <% end %>
+            <a class="dropdown-item" href="<%= new_user_password_path %>">passwords#new</a>
+            <a class="dropdown-item" href="<%= edit_user_password_path %>">passwords#edit</a>
+          </div>
         </li>
+
+
         <li class="nav-item active">
-          <a class="nav-link" href="#">Mon dashboard <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="<%=home_path%>">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <% if user_signed_in? %>
+        <li class="nav-item active">
+          <a class="nav-link" href="<%= user_path(current_user.id) %>">Mon dashboard <span class="sr-only">(current)</span></a>
+        </li>
+        <% end %>
+        <li class="nav-item">
+          <a class="nav-link" href="<%=about_path%>">À propos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">À propos</a>
+          <a class="nav-link" href="<%=contact_path%>">Nous contacter</a>
         </li>
       </ul>
+      <% if user_signed_in? %>
       <ul class="navbar-nav ml-auto ">
         <form class="form-inline my-2 my-lg-0 mr-3">
           <input class="form-control mr-sm-2" type="search" placeholder="Recherche" aria-label="Search">
@@ -25,11 +77,27 @@
               Se déconnecter
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item link-green" href="#">Modifier mes informations</a>
+              <a class="dropdown-item link-green" href="<%= edit_user_registration_path %>">Modifier mes informations</a>
                 <div class="dropdown-divider"></div>
-              <a class="dropdown-item link-green" href="#">Se déconnecter</a>
+              <% if user_signed_in? %>
+              <a class="dropdown-item link-green" href="<%= destroy_user_session_path(session[:user_id]) %>" data-confirm="Es-tu sûr de vouloir te déconnecter ?" data-method="DELETE">Se déconnecter</a>
+            <% end %>
             </div>
           </li>
       </ul>
+      <% else %>
+       <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle btn btn-outline-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Se connecter
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item link-green" href="<%= new_user_session_path %>">Se connecter</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item link-green" href="#">Créer un compte</a>
+          </div>
+        </li>
+      </ul>
+      <%end%>
     </div>
   </nav>
