--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,3 +1,6 @@
+<!-- BACK LINK -->
+<%= render 'layouts/back_link' %> 
+
 <h1>Appointment#new</h1>
 <p>Find me in app/views/appointment/new.html.erb</p>
 
