--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     
     <!-- LOGO -->
     <a class="navbar-brand btn btn-primary" href="<%= root_path %>">
-      <i class="fas fa-cat fa-1x pr-4" style="color:white" ></i>
+      <i class="fab fa-slideshare" style="color:white" ></i>
       <h5>Talent Connect</h5>
     </a>
     
