--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<!-- BACK LINK -->
+<%= render 'layouts/back_link' %> 
 
 <div class="container">
 <h1>N'hésite-pas à nous contacter.</h1>
