--- a/app/views/talents/edit.html.erb
+++ b/app/views/talents/edit.html.erb
@@ -1,3 +1,6 @@
+<!-- BACK LINK -->
+<%= render 'layouts/back_link' %> 
+
 <p>Bienvenue sur la page de modification de votre talent : <%=@talent.title%></p>
 <%= render "edit_talent_form" %>
 
