--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<!-- BACK LINK -->
+<%= render 'layouts/back_link' %> 
+
 <h1 class="card-title text-center"><i class="fas fa-user-circle"></i></h1>
 <h2 class="card-title text-center">Mon profil</h2>
 <hr class="mb-4">
