--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<!-- BACK LINK -->
+<%= render 'layouts/back_link' %> 
 
 <div class="container">
 <h1>Notre équipe</h1>
