--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,5 @@
  <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
+    <i class="fas fa-link fa-2x mr-3 text-white"></i>
     <a class="navbar-brand" href="<%=home_path%>">Talent Connect</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
