--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <!-- HEADER -->
-    <%= render 'layouts/navbar' %>
+    <%= render 'layouts/header' %>
 
     <div class="container">
       <!-- USERS MESSAGES -->
