switching nav in application layout

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -91,7 +91,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item link-green" href="<%= new_user_session_path %>">Se connecter</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item link-green" href="#">Créer un compte</a>
+            <a class="dropdown-item link-green" href="<%= new_user_registration_path %>">Créer un compte</a>
           </div>
         </li>
       </ul>
