--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,6 +36,7 @@
             <a a class="dropdown-item" href="<%= users_path %>">users#index</a>
             <% if user_signed_in? %>
               <a a class="dropdown-item" href="<%= user_path(current_user.id) %>">users#show</a>
+              <a a class="dropdown-item" href="<%= mentor_show_user_path(current_user.id) %>">user_mentor_profile#show</a>
             <% end %>
             <a class="dropdown-item" href="<%= new_user_registration_path %>">registrations#new</a>
             <a class="dropdown-item" href="<%= edit_user_registration_path %>">registrations#edit</a>
