--- a/app/views/layouts/_searchform-navbar.html.erb
+++ b/app/views/layouts/_searchform-navbar.html.erb
@@ -1,12 +1,15 @@
-<%= form_tag search_results_path, method: 'get' do %>
-    <div class="form-group row d-flex justify-content-center align-items-center">
-        <div class="col-sm-6">
-          <%= text_field_tag :search_keywords, nil, class: "form-control form-control-md", id: "search_keywords", placeholder: "Rechercher" %>
+<!-- DO NOT DISPLAY IF ROOT/HOME/SEARCHRESULT PAGES -->
+<% unless current_page?(root_path) || current_page?(home_path) || current_page?(search_results_path) %>
+    <%= form_tag search_results_path, method: 'get' do %>
+        <div class="form-group row d-flex justify-content-center align-items-center">
+            <div class="col-sm-6">
+                <%= text_field_tag :search_keywords, nil, class: "form-control form-control-md", id: "search_keywords", placeholder: "Rechercher" %>
+            </div>
+            <div class="col-sm-2">
+                <%= button_tag(type: "submit", class: "btn btn-primary btn-lg") do %>
+                    <i class="fas fa-search"></i>
+                <% end %>
+            </div>
         </div>
-        <div class="col-sm-2">
-            <%= button_tag(type: "submit", class: "btn btn-primary btn-lg") do %>
-                <i class="fas fa-search"></i>
-            <% end %>
-        </div>
-    </div>
+    <% end %>
 <% end %>
