--- a/app/views/layouts/_searchform.html.erb
+++ b/app/views/layouts/_searchform.html.erb
@@ -2,10 +2,12 @@
     <div class="form-group row max-width-50">
         <label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je veux apprendre:</label>
         <div class="col-sm-8">
-          <%= text_field_tag :search_keywords, nil, class: "form-control form-control-lg", id: "search_keywords", placeholder: "ta recherche" %>
+          <%= text_field_tag :search_keywords, nil, class: "form-control form-control-lg", id: "search_keywords", placeholder: "Recherche un talent" %>
         </div>
         <div class="col-sm-1">
-            <%= submit_tag "Recherche", class: "btn btn-primary btn-lg mb-2" %> 
+            <%= button_tag(type: "submit", class: "btn btn-primary btn-lg mb-2 d-flex justify-content-center align-items-center") do %>
+                <i class="fas fa-search mr-1"></i>Rechercher
+            <% end %>
         </div>
     </div>
 <% end %>
