image in jumbotron

--- a/app/views/layouts/_jumbo-landing.html.erb
+++ b/app/views/layouts/_jumbo-landing.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron-fluid pb-2 mb-4">
+<div class="jumbotron pb-2 mb-4">
     <p class="lead mb-4 pb-3 max-width-50 text-center mt-4 -pt-3">Trouve un mentor pour apprendre de nouvelles compétences en peer-learning, puis enseigne ces compétences à un apprenti! </p>
     <%= render partial: 'layouts/searchform' %>
 </div>
