--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -776,10 +776,12 @@ a.text-primary:focus {
   color: #D3D3D3 !important;
 }
 
-.jumbotron-fluid {
+.jumbotron {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   box-shadow: 0 4px 6px -6px grey;
+  background-image: url("../images/jumbotron.jpg");   
+  background-size: cover;
 }
