--- a/app/views/layouts/_searchform-navbar.html.erb
+++ b/app/views/layouts/_searchform-navbar.html.erb
@@ -7,7 +7,7 @@
             </div>
 
             <div class="">
-                <%= button_tag(type: "submit", class: "btn btn-primary btn-lg") do %>
+                <%= button_tag(type: "submit", class: "btn btn-primary") do %>
                     <i class="fas fa-search"></i>
                 <% end %>
             </div>
