--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,7 +1,7 @@
 Bienvenue au sein de la communauté Talent Connect !
 ==========================================================
 
-Salut à toi amateur de talent,
+Salut <%= @user.first_name %>,
 
 Tu t'es inscrit sur Talent Connect en utilisant l'e-mail suivant : <%= @user.email %>.
 Pour accéder à ton espace client, connecte-toi via : <%= @urlLogin %> .
