--- a/app/views/layouts/_card-talent.html.erb
+++ b/app/views/layouts/_card-talent.html.erb
@@ -39,11 +39,11 @@
           </div>
         <% when "paid" %>
           <div class="col-md-3 m-auto pr-4 text-center">
-            <p class="text-primary">Séance validé</p>
+            <p class="text-primary">Séance validée</p>
           </div>
         <% when "past" %>
           <div class="col-md-3 m-auto pr-4 text-center">
-            <p class="text-secondary">Évènement passée</p>
+            <p class="text-secondary">Évènement passé</p>
             <a href="#">Noter ce rendez-vous</a>
           </div>
         <% else %>
