--- a/app/views/layouts/_searchform-half.html.erb
+++ b/app/views/layouts/_searchform-half.html.erb
@@ -1,4 +1,4 @@
-<label for="inputEmail3" class="col-form-label-lg">Je veux apprendre:</label>
+<label for="inputEmail3" class="col-form-label-lg">Je souhaite découvrir : </label>
 <%= form_tag search_results_path, method: 'get' do %>
     <div class="form-group input-group max-width-50">
         <div class="">
