--- a/app/views/talents/_edit_talent_form.html.erb
+++ b/app/views/talents/_edit_talent_form.html.erb
@@ -39,7 +39,7 @@
   <%if @talent.picture.attached?%>
     <%= image_tag @talent.picture, alt: 'picture' %>
   <%else%>
-    <p>=== Il n'y a pas encore de picture lié à ce talent ===</p>
+    <p>=== Il n'y a pas encore de picture liée à ce talent ===</p>
   <%end%>
   <div class="field">
     <%= form.label 'Photos' %>
