--- a/app/views/talents/_new_talent_form.html.erb
+++ b/app/views/talents/_new_talent_form.html.erb
@@ -3,13 +3,13 @@
   <!-- title -->
   <div class="field">
     <%= form.label :title, 'Titre' %>
-    <%= form.text_field :title, class: "form-control", placeholder: "L'intitulé de ton talent. Maximum 140 caractère" %>
+    <%= form.text_field :title, class: "form-control", placeholder: "L'intitulé de ton talent. (140 caractères maximum)." %>
   </div>
 
   <!-- Description -->
   <div class="field">
     <%= form.label :description, 'Description' %>
-    <%= form.text_area :description, class: "form-control", placeholder: "Décrit ton talent. Maximum 1000 caractère" %>
+    <%= form.text_area :description, class: "form-control", placeholder: "Décris ton talent. (1000 caractères maximum)." %>
   </div>
 
   <!-- Duration -->
