--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,11 +1,11 @@
 Bienvenue au sein de la communauté Talent Connect !
 ==========================================================
 
-Salut à toi amateur de talent,
+Salut à toi amateur de talents,
 
 Tu t'es inscrit sur Talent Connect en utilisant l'e-mail suivant : <%= @user.email %>.
 Pour accéder à ton espace client, connecte-toi via : <%= @urlLogin %> .
  
 À très vite au sein de la communauté de partage de talents ! 
 
-L'équipe de Talent Connect
+L'équipe de Talent Connect.
