--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -16,11 +16,11 @@
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fas fa-at"></i> </span>
         </div>
-        <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "Adresse email", autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+        <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "Adresse email", autocomplete: "e-mail", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
       </div> <!-- form-group// -->
 
       <!-- MESSAGE EXPLICATIF -->
-      <i class="d-flex justify-content-center">Envoi un email avec les instructions de confirmation.</i>
+      <i class="d-flex justify-content-center">Envoie un email avec les instructions de confirmation.</i>
       <!-- VALIDATION BUTTON -->
       <div class="actions">
         <%= f.submit "Renvoyer les informations de confirmation", class: "btn btn-primary btn-block" %>
