--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -73,7 +73,7 @@
     <h4 class="card-title mt-5 text-center"><%= t('.cancel_my_account') %></h4>
     <hr>
     <!-- FORM -->
-    <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: "Etes-vous sûr de vouloir supprimer le compte ?" }, method: :delete, class: "btn btn-danger btn-block" %>
+    <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: "Es-tu sûr de vouloir supprimer ton compte ?" }, method: :delete, class: "btn btn-danger btn-block" %>
 
 
     <!-- OTHER LINKS -->
