--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,8 +2,8 @@
 <%= render 'layouts/back_link' %> 
 
 <div class="container">
-<h1>N'hésite-pas à nous contacter.</h1>
-<p>Envoie-nous tes coordonnées, et l'un des super équipiers de TalentConnect se fera un plaisir de te recontacter.
+<h1>N'hésite pas à nous contacter !</h1>
+<p>Envoie nous tes coordonnées, et l'un des super équipiers de TalentConnect se fera un plaisir de te recontacter.
 </p>
 
 <!--contact form-->
@@ -20,7 +20,7 @@
   </div>
   <div class="form-row" display="flex" flex-flow="row wrap">
     <div class="form-group">
-      <label for="contactInputEmail" style="margin-bottom: 10px; margin-right: 15px">     * Adresse Email</label>
+      <label for="contactInputEmail" style="margin-bottom: 10px; margin-right: 15px">     * Adresse E-mail</label>
       <input type="email" class="form-control" id="contactInputEmail" placeholder="Entre ton adresse email ici" maxlength="255" type="text" class="TextField" style="width:395px; margin-bottom: 10px; margin-right: 15px">
     </div>
     <div class="form-group">
@@ -42,9 +42,9 @@
 
 <!--alternative contact via email-->
 <div class="contact-direct-email" display="flex" flex-flow="row wrap">
-  <p>Ou si tu préfères la méthode classique d'envoi d'un email, clique sur le lien ci-dessous pour nous contacter.</p>
+  <p>Ou si tu préfères la méthode classique d'envoi d'un e-mail, clique sur le lien ci-dessous pour nous contacter.</p>
   <div class="text-align-left">
-    <button type="submit" class="btn btn-primary ">Envoi d'un email</button>
+    <button type="submit" class="btn btn-primary ">Envoi d'un e-mail</button>
   </div>
 </div>
 
