--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -14,7 +14,7 @@
     <h2>Bienvenue au sein de la communauté Talent Connect !</h2>
     <hr>
     <p>
-      Salut à toi amateur de talent,<br>
+      Salut à toi amateur de talents,<br>
     </p>
     <p>
       Tu t'es inscrit sur <%= link_to "Talent Connect", @urlHomePage %> en utilisant l'e-mail suivant : <%= @user.email %>.<br>
@@ -24,7 +24,7 @@
     <p>
       À très vite au sein de la communauté de partage de talents ! 
       <br><br>
-      L'équipe de Talent Connect
+      L'équipe de Talent Connect.
     </p>
   </body>
 </html>
