--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -41,7 +41,7 @@
     </div>
 
   </div>
-  <div class="card card-custom2 shadow mb-4 mt-4 pt-2 pl-4 max-width-45 row">
+  <div class="card card-custom2 shadow mb-4 mt-4 pt-2 pl-4 ml-1 max-width-40 row">
     <h5>Description: </h5>
     <p><%= @talent.description %></p>
   </div>
