--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-md navbar-primary bg-primary mb-3">
+ <nav class="navbar navbar-expand-lg navbar-primary bg-primary mb-3">
     <!-- LOGO -->
     <a class="navbar-brand" href="<%=root_path%>">
       <i class="fab fa-slideshare fa-2x mr-1 text-white"></i>
