kitUI in test menu

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,6 +22,11 @@
             [T]
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            
+            <!-- KIT UI -->
+            <a a class="dropdown-item" href="<%= static_pages_kit_ui_path %>">KIT UI</a>
+            
+            <hr>
             <!-- TALENTS -->
             <a class="dropdown-item" href="<%= talents_path %>">talents#index</a>
             <a class="dropdown-item" href="<%= talent_path(1) %>">talents#show n°1</a>
