--- a/app/views/layouts/_box-search-result.html.erb
+++ b/app/views/layouts/_box-search-result.html.erb
@@ -7,7 +7,25 @@
             <%= render partial: 'layouts/card-talent', locals: {model: talent, type: "search-result"} %>
         <% end %>
     </div>
-    <div class="col">
-      IMPLEMENTATION GOOGLE MAPS 
+    <div class="col" id="map">
     </div>
+        <script>
+            function initMap(){
+                var options = {
+                    zoom:8,
+                    center:{lat:48.8534,lng:2.3488}
+                }
+                // New map
+                var map = new google.maps.Map(document.getElementById('map'), options);
+                // Add marker
+                var marker = new google.maps.Marker({
+                    position:{lat:48.8640928,lng:2.2482579},
+                    map:map
+                });
+            }
+        </script>
+        <script defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCROEXaB0Wy3Go4BC2Mv8oAg8uVR4r9PmM&callback=initMap">
+        </script>
   </div>
+</div>
