--- a/app/views/talents/_new_talent_form.html.erb
+++ b/app/views/talents/_new_talent_form.html.erb
@@ -1,3 +1,7 @@
+ <script defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCI3Q_EMl4fqy5IsGdqAFzhlWJb9QOcAYI&libraries=places&callback=initMap">
+  </script>
+
 <%= form_with model: @talent, local: true, multipart: true do |form| %>
 
   <!-- title -->
@@ -23,13 +27,6 @@
     <%= fields_for :place do |place_form| %>
         <%= place_form.label :address, 'Adresse' %>
         <%= place_form.text_field :address %>
-
-        <%= place_form.label :city_name, 'Ville' %>
-        <%= place_form.text_field :city_name %>
- 
-        <%= place_form.label :zip_code %>
-        <%= place_form.text_field :zip_code %>
-
     <% end %>
   </div>
 
@@ -43,3 +40,15 @@
   <%= form.submit %>
 </div>
 <% end %>
+  <!-- AUTO COMPLETE -->
+
+<script>
+    var searchInput ='place_address';
+    function initMap() {
+        var autocomplete;
+        autocomplete = new google.maps.places.Autocomplete(document.getElementById(searchInput))
+        google.maps.event.addListener(autocomplete, 'place_changed', function (){
+            var near_place = autocomplete.getPlace();
+        });
+    };
+</script>
