Front page all devises + many images

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -790,7 +790,7 @@ a.text-primary:focus {
   align-items: center;
   justify-content: center;
   box-shadow: 0 4px 6px -6px grey;
-  background-image: url("../images/jumbotron.jpg");
+  background-image: url("../images/_page_jumbotron.jpg");
   background-size: cover;
 }
 
