--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,31 +1,40 @@
 <!-- ERRORS MESSAGES -->
 <%= render "devise/shared/error_messages", resource: resource %>
 
-<div class="card bg-light mx-auto" style="width: 500px;">
-  <article class="card-body mx-auto" style="max-width: 450px;">
-	  <h2 class="card-title mt-3 text-center">Un petit oubli ?</h2>
-    <hr>
-    <!-- FORM -->
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <article class="card-body mx-auto">
+        <h2 class="card-title mt-3">Un petit oubli ?</h2>
+        <hr>
+        <!-- FORM -->
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 
-      <!-- EMAIL -->
-      <div class="form-group input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text"> <i class="fas fa-at"></i> </span>
-        </div>
-        <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "#{I18n.t 'helpers.placeholder.user.email'}", autocomplete: "email" %>
-      </div> <!-- form-group// --> 
+          <!-- EMAIL -->
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"> <i class="fas fa-at"></i> </span>
+            </div>
+            <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "#{I18n.t 'helpers.placeholder.user.email'}", autocomplete: "email" %>
+          </div> <!-- form-group// --> 
 
-      <!-- MESSAGE EXPLICATIF -->
-      <i class="d-flex justify-content-center"><%= t('helpers.placeholder.reset_password_instruction') %></i>
-      <!-- VALIDATION BUTTON -->
-      <div class="actions">
-        <%= f.submit t('helpers.placeholder.send_me_reset_password_instructions'), class: "btn btn-primary btn-block" %>
+          <!-- MESSAGE EXPLICATIF -->
+          <small><i class=""><%= t('helpers.placeholder.reset_password_instruction') %></i></small>
+          <!-- VALIDATION BUTTON -->
+          <div class="actions">
+            <%= f.submit t('helpers.placeholder.send_me_reset_password_instructions'), class: "btn btn-primary mb-3" %>
+          </div>
+          
+
+          <!-- OTHER LINKS -->
+          <%= render "devise/shared/links" %>
+        <% end %>
+      </article>
+    </div>
+    <div class="col">
+      <div class="mx-auto mt-4">
+        <%= image_tag("_page_devise.jpg", width: 650, class: "") %>
       </div>
-      
-
-      <!-- OTHER LINKS -->
-      <%= render "devise/shared/links" %>
-    <% end %>
-  </article>
-</div> <!-- card.// -->
+    </div>
+  </div>
+</div>
