--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,33 +1,42 @@
 <!-- ERRORS MESSAGES -->
 <%= render "devise/shared/error_messages", resource: resource %>
 
-<div class="card bg-light mx-auto" style="width: 500px;">
-  <article class="card-body mx-auto" style="max-width: 450px;">
-	  <h2 class="card-title mt-3 text-center">Compte bloqué ?</h2>
-    <hr>
-    <!-- FORM -->
-    <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <article class="card-body mx-auto">
+        <h2 class="card-title mt-3">Compte bloqué ?</h2>
+        <hr>
+        <!-- FORM -->
+        <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
 
-      <!-- CONFIRMATION MESSAGES, ALERT MESSAGES AND WARNING MESSAGES -->
-      <%= render "devise/shared/error_messages", resource: resource %>
+          <!-- CONFIRMATION MESSAGES, ALERT MESSAGES AND WARNING MESSAGES -->
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-      <!-- EMAIL -->
-      <div class="form-group input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text"> <i class="fas fa-at"></i> </span>
-        </div>
-        <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "Adresse email", autocomplete: "email" %>
-      </div> <!-- form-group// --> 
+          <!-- EMAIL -->
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"> <i class="fas fa-at"></i> </span>
+            </div>
+            <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "Adresse email", autocomplete: "email" %>
+          </div> <!-- form-group// --> 
 
-      <!-- MESSAGE EXPLICATIF -->
-      <i class="d-flex justify-content-center">Envoi un email avec les instructions de déblocage.</i>
-      <!-- VALIDATION BUTTON -->
-      <div class="actions">
-        <%= f.submit "Débloquer mon compte", class: "btn btn-primary btn-block" %>
+          <!-- MESSAGE EXPLICATIF -->
+          <i class="">Envoi un email avec les instructions de déblocage.</i>
+          <!-- VALIDATION BUTTON -->
+          <div class="actions">
+            <%= f.submit "Débloquer mon compte", class: "btn btn-primary mb-3" %>
+          </div>
+
+          <!-- OTHER LINKS -->
+          <%= render "devise/shared/links" %>
+        <% end %>
+      </article>
+    </div>
+    <div class="col">
+      <div class="mx-auto mt-4">
+        <%= image_tag("_page_devise.jpg", width: 650, class: "") %>
       </div>
-
-      <!-- OTHER LINKS -->
-      <%= render "devise/shared/links" %>
-    <% end %>
-  </article>
-</div> <!-- card.// -->
+    </div>
+  </div>
+</div>
